docs: rewrite README following modern best practices
Restructure README to help users understand and use mcp-vector-search
within 5 minutes. Front-load quick start with copy-pasteable examples,
add clear what/why section, demonstrate search tool usage, and organize
advanced features progressively. Add table of contents and links to
detailed documentation (about.md, install.md, using.md, path-spec.md).

Also add /update-readme slash command for future README updates and
remove redundant JVM flag note from install.md.